--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
     <head>
         <meta charset="utf-8">
         <title>Pomodoro Timer</title>
+        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/normalize.css">
     </head>
     <body>
-        <header>
-            <h1>POMODORO</h1>
-            <h2>Timer</h2>
-            <p>Find flow and manage your time efficiently while studying</p>
-        </header>
-        <main>
-            <div class="timer" id="pomodoro">25:00</div>
-            <div class="timer" id="short-break">5:00</div>
-            <div class="timer" id="long-break">15:00</div>
-            <button name="pomodoro-button">Pomodoro</button>
-            <button name="short-break-button">Short Break</button>
-            <button name="long-break">Long Break</button>
-        </main>
+        <section>
+            <header>
+                <div id="title-container">
+                    <h1 id="main-title">POMODORO</h1>
+                    <h2 id="subtitle0">TIMER</h2>
+                </div>
+                <p id="subtitle1">FIND FLOW AND MANAGE YOUR TIME EFFICIENTLY</p>
+            </header>
+            <main>
+                <div class="timer" id="pomodoro">25:00</div>
+                <div class="timer" id="short-break">5:00</div>
+                <div class="timer" id="long-break">15:00</div>
+                <button name="pomodoro-button">Pomodoro</button>
+                <button name="short-break-button">Short Break</button>
+                <button name="long-break">Long Break</button>
+            </main>
+        </section>
     </body>
 </html>
