Add google icon buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Pomodoro Timer</title>
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="stylesheet" href="./css/normalize.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     <body>
         <section id="page-content">
@@ -19,6 +20,15 @@
                 <div class="timer" id="pomodoro">25:00</div>
                 <div class="timer" id="short-break">5:00</div>
                 <div class="timer" id="long-break">15:00</div>
+                <span class="material-symbols-outlined">
+                    play_arrow
+                </span>
+                <span class="material-symbols-outlined">
+                    stop
+                </span>
+                <span class="material-symbols-outlined">
+                    replay
+                </span>
                 <section id="button-container">
                     <button class="timer-selection" name="pomodoro-button">POMODORO</button>
                     <button class="timer-selection" name="short-break-button">SHORT BREAK</button>
