Style timers and time, add container

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
                 <p id="subtitle1">FIND FLOW AND MANAGE YOUR TIME EFFICIENTLY</p>
             </header>
             <main>
-                <div class="timer" id="pomodoro">25:00</div>
-                <div class="timer" id="short-break">5:00</div>
-                <div class="timer" id="long-break">15:00</div>
+                <div class="timer" id="pomodoro">
+                    <p class="time">25:00</p>
+                </div>
+                <div class="timer" id="short-break">
+                    <p class="time">5:00</p>
+                </div>
+                <div class="timer" id="long-break">
+                    <p class="time">15:00</p>
+                </div>
                 <span class="material-symbols-outlined">
                     play_arrow
                 </span>
