Finalize Css styling for mobile devices

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Pomodoro Timer</title>
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="stylesheet" href="./css/normalize.css">
@@ -17,15 +18,17 @@
                 <p id="subtitle1">FIND FLOW AND MANAGE YOUR TIME EFFICIENTLY</p>
             </header>
             <main>
-                <div class="timer" id="pomodoro">
-                    <p class="time">25:00</p>
-                </div>
-                <div class="timer" id="short-break">
-                    <p class="time">5:00</p>
-                </div>
-                <div class="timer" id="long-break">
-                    <p class="time">15:00</p>
-                </div>
+                <section id="timer-container">
+                    <div class="timer" id="pomodoro">
+                        <p class="time">25:00</p>
+                    </div>
+                    <div class="timer" id="short-break">
+                        <p class="time">5:00</p>
+                    </div>
+                    <div class="timer" id="long-break">
+                        <p class="time">15:00</p>
+                    </div>
+                </section>
                 <span class="material-symbols-outlined">
                     play_arrow
                 </span>
