Change background, add information section, and adjust layout

--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
                     <button class="timer-selection" name="short-break-button">SHORT BREAK</button>
                     <button class="timer-selection" name="long-break">LONG BREAK</button>
                 </section>
+                <section id="discription">
+                    <div id="subheading-container">
+                        <span class="material-symbols-outlined" id="tomato">
+                            nutrition
+                        </span>
+                        <h2 id="subheading">?</h2>
+                    </div>   
+                    <p id="info">
+                        The Pomodoro technique is a simple time management strategy that recommends fixed periods of deep focus 
+                        (traditionally 25 minutes) followed by short periods of rest (usually 5 minutes is sufficient). 
+                        These steps are repeated 4 times (each interval is called a <em>pomodoro</em>&#8212;                         inspired by the tomato-shaped kitchen timer the creator Francesco Cirillo used) 
+                        before a longer (15 minute) break is taken. The process is repeated until the task is completed.
+                    </p>
+                </section>
             </main>
         </section>
     </body>
