Fix size difference between controls

--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
                         <p class="time">15:00</p>
                     </div>
                 </section>
-                <span class="material-symbols-outlined">
-                    play_arrow
-                </span>
-                <span class="material-symbols-outlined">
-                    stop
-                </span>
-                <span class="material-symbols-outlined">
-                    replay
-                </span>
+                <div id="control-container">
+                    <span class="material-symbols-outlined">
+                        play_arrow
+                    </span>
+                    <span class="material-symbols-outlined">
+                        stop
+                    </span>
+                    <span class="material-symbols-outlined" id="replay">
+                        replay
+                    </span>
+                </div>
                 <section id="button-container">
                     <button class="timer-selection" name="pomodoro-button">POMODORO</button>
                     <button class="timer-selection" name="short-break-button">SHORT BREAK</button>
